[gd_scene load_steps=26 format=3 uid="uid://dejbr58ec27np"]

[ext_resource type="Texture2D" uid="uid://bkh2xv84pfflg" path="res://Art/Spritesheets/Basic Charakter Spritesheet.png" id="1_7tbtl"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_h3awm"]
[ext_resource type="Script" path="res://Scripts/player_movement.gd" id="2_2jti8"]
[ext_resource type="Script" path="res://Scripts/player_stats.gd" id="4_6pmsv"]
[ext_resource type="Script" path="res://Scripts/reusable/item_storage.gd" id="5_aovf8"]
[ext_resource type="PackedScene" uid="uid://bqtkrihai4kf6" path="res://Scenes/UI/player_inventory.tscn" id="6_quvdh"]
[ext_resource type="PackedScene" uid="uid://cy2o558icttjk" path="res://Scenes/UI/main_hud.tscn" id="7_eacli"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fhxvv"]
size = Vector2(12, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbap7"]
atlas = ExtResource("1_7tbtl")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppjkt"]
atlas = ExtResource("1_7tbtl")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_42j7t"]
atlas = ExtResource("1_7tbtl")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q1dq"]
atlas = ExtResource("1_7tbtl")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2acvd"]
atlas = ExtResource("1_7tbtl")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3cdr"]
atlas = ExtResource("1_7tbtl")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sl0fy"]
atlas = ExtResource("1_7tbtl")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcujq"]
atlas = ExtResource("1_7tbtl")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6h64"]
atlas = ExtResource("1_7tbtl")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhxde"]
atlas = ExtResource("1_7tbtl")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_is0rj"]
atlas = ExtResource("1_7tbtl")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0goj"]
atlas = ExtResource("1_7tbtl")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5cfd"]
atlas = ExtResource("1_7tbtl")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7joh"]
atlas = ExtResource("1_7tbtl")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v24fq"]
atlas = ExtResource("1_7tbtl")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkhsd"]
atlas = ExtResource("1_7tbtl")
region = Rect2(144, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_abw2k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbap7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppjkt")
}],
"loop": true,
"name": &"idle_down",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_42j7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q1dq")
}],
"loop": true,
"name": &"idle_left",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2acvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3cdr")
}],
"loop": true,
"name": &"idle_right",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sl0fy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcujq")
}],
"loop": true,
"name": &"idle_up",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6h64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhxde")
}],
"loop": true,
"name": &"run_down",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_is0rj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0goj")
}],
"loop": true,
"name": &"run_left",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5cfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7joh")
}],
"loop": true,
"name": &"run_right",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v24fq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkhsd")
}],
"loop": true,
"name": &"run_up",
"speed": 4.0
}]

[node name="Player" type="Node2D"]
y_sort_enabled = true
position = Vector2(1, 0)
script = ExtResource("1_h3awm")

[node name="PlayerMovement" type="CharacterBody2D" parent="."]
script = ExtResource("2_2jti8")
char_speed = 200.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerMovement"]
y_sort_enabled = true
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_fhxvv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PlayerMovement"]
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_abw2k")
animation = &"idle_down"
frame_progress = 0.208932
offset = Vector2(0, -8)

[node name="Camera2D" type="Camera2D" parent="PlayerMovement"]
zoom = Vector2(2, 2)

[node name="RayCast2D" type="RayCast2D" parent="PlayerMovement"]
target_position = Vector2(0, 20)
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="PlayerStats" type="Node2D" parent="."]
script = ExtResource("4_6pmsv")

[node name="PlayerStorage" type="Node2D" parent="."]
script = ExtResource("5_aovf8")

[node name="PlayerHUD" type="CanvasLayer" parent="."]

[node name="PlayerInventory" parent="PlayerHUD" instance=ExtResource("6_quvdh")]

[node name="MainHUD" parent="PlayerHUD" instance=ExtResource("7_eacli")]
popup_time = 2.0
